Implement the Biokit Halves damage dealt by alien poison. g_poisonDamage has been increased from 5 to 10 to accommodate this change.

--- a/pkg/unvanquished_src.dpkdir/configs/upgrades/jetpack.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/upgrades/jetpack.attr.cfg
@@ -9,7 +9,7 @@ team humans
 // limits
 price 120
 unlockThreshold 100
-usedSlots 1 backpack
+usedSlots 2 backpack belt
 
 // abilities
 isPurchasable
